2003-08-22  Not Zed  <NotZed@Ximian.com>

	* em-camel-stream.c (em_camel_stream_new): now take the gtkhtml
	too, and hook onto it's destroy so we don't try writing anymore
	after its gone.
	(stream_write, stream_flush, stream_close, emcs_gui_received):
	NOOP if the gtkhtml has been destroyed.
	(emcs_gtkhtml_destroy): null out the stream when the gtkhtml gets
	destroyed, it is no longer valid.
	(emcs_gui_received): dont try to soak all outstanding events, it
	always runs synchronous anyway, just get one and exit.

	* em-format-html.c (efh_gtkhtml_destroy): if the gtkhtml gets
	destroyed, abort any pending timeouts/processing.
	(efh_format_source): fixed implementation to write out all
	headers.
	(efh_multipart_related, emfh_multipart_related_check): separate
	checking for unused parts into a separate job, which is run after
	previous ones are executed.  keep track of visibility tree level
	in job, etc.

2003-08-22  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-browser.c (emfb_mail_compose): Implemented.
	(emfb_mail_post): Implemented.

	* em-utils.c (em_utils_compose_new_message): New function.
	(em_utils_compose_new_message_with_mailto): New.
	(em_utils_post_to_url): New.

2003-08-21  Not Zed  <NotZed@Ximian.com>

	* subscribe-dialog.glade: removed the text in the progress thing.
	It never showed up anyway and caused weird resizing stuff when the
	progress bar was active.

	* em-subscribe-editor.c: Found the correct version of the new
	subscribe code (on branch, duh!), and integrated it.
	(sub_selection_changed): Sensitise buttons based on selection.

	* em-format-html.c (efh_text_plain, efh_text_enriched)
	(efh_write_text_html): Use format_text for text output.
	(efh_write_image): use explicit image writer.
	(emfh_gethttp): added some progress stuff.
	(efh_format_do): maintain the accessible uri tree during jobs.
	(efh_url_requested): store the current uri accessibility tree node
	in the job, so it can be properly set for sub-jobs.